panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_after_comma.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_after_comma.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_after_comma.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef name `int`)
   (typedef ptr `int`)
   (typedef fptr `int`)
   (typedef xs `int`)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (typedef function `int`)
         (compound-statement
            (definition a~3 `int` ∅)
            (definition name~4 `int` (42 `int`))
            (definition b~5 `int` ∅)
            (definition ptr~6 `ptr<int>`
               (addressof `ptr<int>`
                  (name~4 `int`)))
            (definition c~7 `int` ∅)
            (declaration external function~8 `fn(∅: int) -> int` ∅)
            (definition d~9 `int` ∅)
            (definition fptr~10 `ptr<fn(∅: int) -> int>`
               (addressof `ptr<fn(∅: int) -> int>`
                  (function~8 `fn(∅: int) -> int`)))
            (definition e~11 `int` ∅)
            (definition xs~12 `array<int; 5>`
               (braced
                  (subobject +0 (123 `int`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (name~4 `int`)))
            (expression
               (combine `int`
                  (assign `ptr<int>` (unnamed-temporary~13 `ptr<int>`)
                     (addressof `ptr<int>`
                        (name~4 `int`)))
                  (assign `int` (deref `int` (unnamed-temporary~13 `ptr<int>`)) (add `int` (deref `int` (unnamed-temporary~13 `ptr<int>`)) (++ `int`)))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (deref `int` (ptr~6 `ptr<int>`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (call `int`
                     (addressof `ptr<fn(∅: int) -> int>`
                        (function~8 `fn(∅: int) -> int`))
                     (27 `int`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (call `int` (fptr~10 `ptr<fn(∅: int) -> int>`)
                     (5 `int`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (deref `int`
                     (ptr-add `ptr<int>`
                        (noop-type-conversion `ptr<int>`
                           (addressof `ptr<array<int; 5>>`
                              (xs~12 `array<int; 5>`)))
                        (sign-extend `long` (0 `int`)))))))))
   (function-definition external
      function~14 `fn(value: int) -> int`
      (params
         value~16 `int`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 13>>`
                        (string `array<char; 13>` "function %d\n\0"))))
               (value~16 `int`)))
         (return (add `int` (value~16 `int`) (1 `int`))))))

----- stderr -----
