panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_function_pointer_value.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_function_pointer_value.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_function_pointer_value.c"
   (typedef name `int`)
   (function-definition external
      f~0 `fn(name: int) -> int`
      (params
         name~2 `int`)
      (compound-statement
         (return (multiply `int` (name~2 `int`) (2 `int`)))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (definition name~5 `ptr<fn(∅: int) -> int>`
            (addressof `ptr<fn(name: int) -> int>`
               (f~0 `fn(name: int) -> int`)))
         (return
            (call `int` (name~5 `ptr<fn(∅: int) -> int>`)
               (21 `int`))))))

----- stderr -----
