panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_typedef.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (compound-statement
            (typedef name `int`)
            (compound-statement
               (typedef name `char const`)
               (definition x~3 `char const` (truncate `char` ('a' `int`)))
               (expression
                  (call `int`
                     (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                        (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                     (noop-type-conversion `ptr<char const>`
                        (noop-type-conversion `ptr<char>`
                           (addressof `ptr<array<char; 4>>`
                              (string `array<char; 4>` "%c\n\0"))))
                     (sign-extend `int` (x~3 `char const`)))))
            (definition x~4 `int` (123 `int`))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (x~4 `int`))))
         (definition name~5 `int` (42 `int`))
         (return (name~5 `int`)))))

----- stderr -----
