panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_typedef_array_decay.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_typedef_array_decay.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_array_decay.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef i32 `int`)
   (typedef array_with_length `array<int; 42>`)
   (typedef array_with_unknown_length `array<int; ∅>`)
   (typedef pointer `ptr<int>`)
   (function-definition external
      check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void`
      (params
         xs~3 `ptr<int>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (sizeof `unsigned long` 8 (xs~3 `ptr<int>`))))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))))
   (function-definition external
      check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void`
      (params
         xs~6 `ptr<int>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (sizeof `unsigned long` 8 (xs~6 `ptr<int>`))))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))))
   (function-definition external
      main~7 `fn(∅: int, ∅: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~9 `int`
         main.unnamed_parameter.1~10 `ptr<ptr<char>>`)
      (compound-statement
         (definition a~11 `array<int; 3>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))
               (subobject +8 (3 `int`))))
         (definition b~12 `array<int; 4>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))
               (subobject +8 (3 `int`))
               (subobject +12 (4 `int`))))
         (expression
            (call `void`
               (addressof `ptr<fn(xs: ptr<int>) -> void>`
                  (check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void`))
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; 3>>`
                     (a~11 `array<int; 3>`)))))
         (expression
            (call `void`
               (addressof `ptr<fn(xs: ptr<int>) -> void>`
                  (check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void`))
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; 4>>`
                     (b~12 `array<int; 4>`)))))
         (expression
            (call `void`
               (addressof `ptr<fn(xs: ptr<int>) -> void>`
                  (check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void`))
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; 3>>`
                     (a~11 `array<int; 3>`)))))
         (expression
            (call `void`
               (addressof `ptr<fn(xs: ptr<int>) -> void>`
                  (check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void`))
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; 4>>`
                     (b~12 `array<int; 4>`)))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (lengthof `unsigned long` 3 (a~11 `array<int; 3>`))
               (lengthof `unsigned long` 4 (b~12 `array<int; 4>`)))))))

----- stderr -----
