panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_typedef_in_function_scope_does_not_leak.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_typedef_in_function_scope_does_not_leak.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_in_function_scope_does_not_leak.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (typedef name `char const`)
         (definition x~3 `char const` (truncate `char` ('a' `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%c\n\0"))))
               (sign-extend `int` (x~3 `char const`))))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`))))
         (definition name~6 `int` (42 `int`))
         (return (name~6 `int`)))))

----- stderr -----
