panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_typedef_of_function_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_typedef_of_function_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_of_function_type.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (typedef FunctionPtr `fn(∅: ptr<char const>) -> int`)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition ptr~3 `ptr<fn(∅: ptr<char const>) -> int>`
            (addressof `ptr<fn(∅: ptr<char const>) -> int>`
               (puts~0 `fn(∅: ptr<char const>) -> int`)))
         (expression
            (call `int` (ptr~3 `ptr<fn(∅: ptr<char const>) -> int>`)
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 12>>`
                        (string `array<char; 12>` "hello world\0")))))))))

----- stderr -----
